# my-knowledge-graph-project

./: create_knowledge_graph.py  pyproject.toml  synthetic_protein_interactions.tsv
config/: biocypher_config.yaml  schema_config.yaml
template_package/adapters/: adapter_syntetic_data.py
