[tool.poetry]
name = "my-knowledge-graph-project"
version = "0.5.43"
description = ""
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
    "Andreas Maier <andreas.maier-1@uni-hamburg.de>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
